# cloak

./: .cloakpolicy.example  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AGENT_INTEGRATION.md  BUILD_PLAN.md  demo.tape
docs/research/: COMPETITOR_RESEARCH.md  PROMPTS.md  quotecraft.py  quotecraft.redacted.py  result_prompt1.md  result_prompt2.md
examples/: README.md
examples/js-api-client/: .cloakpolicy  client.js
examples/python-pricing-engine/: .cloakpolicy  pricing.py  test_pricing.py
src/cloak/: __init__.py  __main__.py  cli.py  filesystem.py  policy.py  policy_init.py
src/cloak/context/: __init__.py  diff.py  generator.py  js_redactor.py
src/cloak/obfuscate/: __init__.py  js_transformer.py  manifest.py  runner.py  transformer.py
src/cloak/scan/: __init__.py  scanner.py
tests/: test_cli.py  test_context.py  test_context_js.py  test_diff_context.py  test_obfuscate.py  test_obfuscate_js.py  test_policy_init.py
